# YEngineV2

includes/glfw/glad/: glad.h
project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeOutput.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  YEngine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  generatesolution.bat
src/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  YEngine.vcxproj  YEngine.vcxproj.filters  cmake_install.cmake
src/interface/Components/: AnimationComponent.h  CameraComponent.h  Component.h  GraphicsComponent.h  LightComponent.h  PhysicsComponent.h  PositionalComponent.h
src/interface/General/: IDHandler.h  YUtilityTypes.h  idlist.h
src/source/: glad.c
src/source/Components/: AnimationComponent.cpp  CameraComponent.cpp  GraphicsComponent.cpp  LightComponent.cpp  PhysicsComponent.cpp  PositionalComponent.cpp  SubEntityComponent.cpp  SubEntityComponent.h  SuperEntityComponent.cpp  SuperEntityComponent.h
src/source/General/: ComponentManager.cpp  ComponentManager.h  EventHandler.cpp  EventHandler.h  GameTime.cpp  GameTime.h  IComponentManager.h  IDHandler.cpp  IResourceManager.h  Locator.cpp  Locator.h  MemoryManager.cpp  MemoryManager.h  Renderer.cpp  Renderer.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  State.h  StateManager.cpp  StateManager.h  Texture.cpp  Texture.h
tests/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
tests/googletest-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  googletest-distribution.sln
tests/googletest-build/googlemock/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  gmock.sln  gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters
tests/googletest-build/googlemock/gtest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
tests/googletest-download/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  googletest-download.sln  googletest.vcxproj  googletest.vcxproj.filters
tests/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
tests/tests/: CMakeLists.txt  CTestTestfile.cmake  ComponentManager_Test.cpp  Component_Test.cpp  EventHandler_Test.cpp  GameTime_Test.cpp  IDHandler_Test.cpp  INSTALL.vcxproj  INSTALL.vcxproj.filters  MemoryManager_Test.cpp  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  idlist_Test.cpp  main_test.cpp  sharedTestDefinitions.h  tests.vcxproj  tests.vcxproj.filters
